@@ -1,3 +1,4 @@
 DIST opennms-source-1.2.9-1.tar.gz 34323788 RMD160 fe33424c67df3a3247267b407ef25d0c8dee27e1 SHA1 873338d06458255df85d92af5615c49c8b761e06 SHA256 9647a94b0ae28bb57224894684fcd3650eaf5cb3055581187731aa913be8903f
-EBUILD opennms-1.2.9.1.ebuild 2816 RMD160 03d2904b308947a45b77b1aff44438f3feee8e65 SHA1 6b3a84b02842960ccdb7ec4deb8f25a359f0c154 SHA256 738b036850f6a232bfb1cf1d5629b4266444f29d9b249b67ef1ad1615485bb49
+EBUILD opennms-1.2.9.1.ebuild 2896 RMD160 15f89fe7885d06bb85ad21cf08c0cd9a63ebdd5e SHA1 1308686f14f8f93fe251c93836374dcbd0c604d8 SHA256 27bdc52715a90f35432a6ab6c7a0e60a44faaec8db0ecdc53b54ce00ed0abc72
+MISC ChangeLog 509 RMD160 5507f7723b8c2b7913325377ed2104a64a99cd84 SHA1 fe1ba40a8339e1f1a7ab3ddb3e8e16d67400e8b1 SHA256 1ad66e2124b218e12fc39d4a23a96148243c3e13247d4197031d0a2c3415fa29
 MISC metadata.xml 406 RMD160 067a58a51d51509a8e333f594bcdd8a7faab7035 SHA1 1079c061b3694d172dac7a507b5f9d24f0e5d164 SHA256 3108273434655a0e296d8ca732279c9230a3e096009fb2a91e8619d0bd9f5c5b
